# app/Http/Requests/Api/V1/Auth/LoginRequest.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Http\Requests\Api\V1\Auth;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class LoginRequest extends FormRequest {
+    public function authorize() {
+        return true;
+    }
+
+    public function rules() {
+        return [
+            'email' => ['required', 'string', 'email', 'max:255'],
+            'password' => ['required', 'string'],
+            'device_name' => ['nullable', 'string', 'max:255'],
+        ];
+    }
+}
