# app/Http/Resources/Api/V1/AuthUserResource.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\Http\Resources\Api\V1;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class AuthUserResource extends JsonResource {
+    public function toArray($request) {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'email' => $this->email,
+            'admin' => (bool)$this->admin,
+            'created_at' => optional($this->created_at)->toIso8601String(),
+            'updated_at' => optional($this->updated_at)->toIso8601String(),
+        ];
+    }
+}
